# watchtower-api

./: .env.example  .gitignore  README.md  pyproject.toml  sites
app/: main.py
app/api/: api.py
app/api/endpoints/: leaderboard.py  reports.py  scan.py  stats.py  websites.py
app/core/: config.py  database.py
app/models/: leaderboard.py  report.py  ssl.py  website.py
app/services/: carbon_footprint.py  crawler.py  database.py  pagespeed.py  scheduler.py  ssl_checker.py
scripts/: quick_test.py  test_pagespeed.py
tests/: test_carbon_footprint.py  test_integration.py  test_pagespeed.py  test_ssl_checker.py
